* Fixed incorrect unit of sizes >= Petabyte for the -H command line option.

* 'muninn-search --path' now shows the content of remote_url if a product
  is not in the archive. A leading file:// in the remote_url is then omitted.

7.0 2025-08-14
~~~~~~~~~~~~~~

* Added catalogue synchronizer functionality to muninn. This introduces
  muninn-sync, archive.sync(), and a new synchronizer extension interface.

* Added -n/--name-only option to muninn-info.

6.5 2025-03-25
~~~~~~~~~~~~~~

* Added support for optional `auth_args` setting in credentials file for
  oauth2 token requests.

6.4.2 2025-02-24
~~~~~~~~~~~~~~~~

* Fixed issue with loading spatialite for versions of sqlite that were
  build to disallow DQS (double-quoted string literals).

6.4.1 2024-08-14
~~~~~~~~~~~~~~~~

* Fixed issue where only 'dict' values could be stored as a JSON property.

6.4 2024-03-14
~~~~~~~~~~~~~~

* Allow argument to muninn.open() to be a direct url or path to a muninn
  configuration file.

* Added 'distance(geometry,geometry)' expression function.

* Added Geometry.wrap() spherical to 2d geometry wrapping functions.

* Fixed issue when pulling a product that is a directory using the S3 remote
  backend.

* Various fixes when using archive.rebuild_properties() with the S3 storage
  backend.

* Several minor fixes.

6.3 2023-12-13
~~~~~~~~~~~~~~

* Added support for extension-specific configuration sections in archive
  configuration files.

* Introduced `timeout` and `retries` options for the
  `extension:muninn.remote` section in an archive configuration.
  The number of retries now defaults back to 0.

* Added option to muninn-info to show all archives if no archive parameter
  is provided.

* Added muninn.list_archives() function.

* Improved support for using muninn on Windows (e.g. '\' in paths are now
  translated to '/' when stored as muninn metadata)

* Fixed issue where S3 bucket prefix object was created with one '/' too many.

6.2 2023-09-20
~~~~~~~~~~~~~~
