@@ -3,6 +3,8 @@
 * 'muninn-search --path' now shows the content of remote_url if a product
   is not in the archive. A leading file:// in the remote_url is then omitted.
 
+* Allow muninn-sync start/end arguments to be a date+time argument.
+
 7.0 2025-08-14
 ~~~~~~~~~~~~~~
 
